navigation and layout bug fixes

--- a/style2.css
+++ b/style2.css
@@ -4,6 +4,11 @@
     text-align: center;
     padding: 1px;
 }
+
+#navigation {
+    padding-top: 15px;
+}
+
 body {
     font-family: sans-serif;
 }
@@ -43,21 +48,27 @@ li a:hover {
 
 
 video {
+    position: absolute;
     padding: 2%;
+    z-index: -21;
 }
 
-
+h3 {
+    text-align: center;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-left: 1px;
+    background-color: #e8e8e8;
+}
 
 p {
-    word-wrap: break-word;
+    text-align: center;
+    position: inherit;
 }
 
 #body {
 	background-color: #f5f5f5;
-    display: inline;
     padding: 10px;
-    word-wrap: break-word;
-
 }
 
 img {
@@ -70,4 +81,5 @@ img {
     margin-left: 230px;
     padding: 3%;
     padding-top: 0px;
+    
 }
